# Vexal

./: .gitignore  AnsiArt.txt  CMakeLists.txt  README.md  glew-1.5.8.patch
glew/include/GL/: glew.h
glew/lib/: glew32.exp  glew32d.exp
glfw/lib/win32/: win32_init.c
libconfig/lib/: libconfig++.vcproj
libconfig/lib/lbcfg.Debug/: BuildLog.htm  mt.dep  vc90.idb
libconfig/lib/libconfig++.Debug/: BuildLog.htm  mt.dep  vc90.idb
tools/VexalEntityEditor/: .project
tools/VexalEntityEditor/src/net/vexal/tool/entityed/: Main.java
tools/VexalEntityEditor/src/net/vexal/tool/entityed/pane/: EntViewer.java
tools/VexalMapChecksum/: .classpath  .project
tools/VexalMapChecksum/src/net/vexal/tool/mapchecksum/: Log.java  MVersion.java  Main.java  MapVersions.java  iMappable.java
tools/VexalMapChecksum/src/net/vexal/tool/mapchecksum/helper/: MD.java
tools/VexalMapChecksum/src/net/vexal/tool/mapchecksum/version/: Version01.java
vexal/vc9_x86/: ALL_BUILD.APS  ALL_BUILD.rc  ALL_BUILD.vcproj  CMakeCache.txt  GLEW.APS  GLEW.rc  GLEW.vcproj  GLFW.APS  GLFW.rc  GLFW.vcproj  Vexal.sln  ZERO_CHECK.APS  ZERO_CHECK.rc  ZERO_CHECK.vcproj  cmake_install.cmake  resource1.h  resource2.h  resource3.h
vexal/vc9_x86/ALL_BUILD.dir/Debug/: BuildLog.htm
vexal/vc9_x86/Debug/: VexalClient.ilk
vexal/vc9_x86/GLEW.dir/Debug/: BuildLog.htm  GLEW.res
vexal/vc9_x86/GLEW.dir/MinSizeRel/: BuildLog.htm  GLEW.res
vexal/vc9_x86/GLFW.dir/Debug/: BuildLog.htm  GLFW.res
vexal/vc9_x86/VexalClient/: OGLBasic.cpp  OGLBasic.hpp  OGLInit.cpp  OGLInit.hpp  OGLMain.cpp  OGLMain.hpp  RCa19648  RCb19648  RCb22472  VClasses.cpp  VClasses.hpp  VContentServer.cpp  VContentServer.h  Vexal.cpp  Vexal.h  VexalClient.aps  VexalClient.rc  VexalClient.vcproj  config.cpp  config.hpp  console.cpp  console.hpp  defs.h  defs.hpp  logger.cpp  logger.h  logger.hpp  resource.hpp  tcpclient.cpp  tcpclient.h  test.h  verror.cpp  verror.hpp  vers.au3  vexal.cfg  vversion.h  vversion.hpp  watch.bat
vexal/vc9_x86/VexalClient/Debug/: BuildLog.htm  VexalClient.res  mt.dep  vc90.idb
vexal/vc9_x86/ZERO_CHECK.dir/Debug/: BuildLog.htm
vexal/vc9_x86/lib/Debug/: GLEW.lib  GLFW.lib  glew.idb  glfw.idb
vexal/vc9_x86/lib/MinSizeRel/: glew.idb
